WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122253
Keep SVGElementRareData in an SVGElement member instead of a hashmap.
https://bugs.webkit.org/show_bug.cgi?id=122253
Summary
Keep SVGElementRareData in an SVGElement member instead of a hashmap.
Andreas Kling
Reported
2013-10-02 18:15:45 PDT
SVGElement is quite space-wastey already, so one more pointer isn't going to hurt much.
Attachments
Patch
(12.14 KB, patch)
2013-10-02 18:20 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-10-02 18:20:57 PDT
Created
attachment 213220
[details]
Patch
WebKit Commit Bot
Comment 2
2013-10-02 20:20:00 PDT
Comment on
attachment 213220
[details]
Patch Clearing flags on attachment: 213220 Committed
r156819
: <
http://trac.webkit.org/changeset/156819
>
WebKit Commit Bot
Comment 3
2013-10-02 20:20:02 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug