Keep SVGElementRareData in an SVGElement member instead of a hashmap. <https://webkit.org/b/122253>

Reviewed by Antti Koivisto.

Free up another Node flag by moving SVGElement's SVG-specific rare data
to a member variable instead of tracking them in a hashmap on the side.

This grows SVGElement by one pointer, but I will make up for this in
subsequent patches.


Canonical link: https://commits.webkit.org/140303@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156819 268f45cc-cd09-0410-ab3c-d52691b4dbfc